[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["no-std"]
description = "Report panic messages to the host stderr using semihosting"
keywords = ["panic-impl", "panic", "semihosting"]
license = "MIT OR Apache-2.0"
name = "panic-semihosting"
repository = "https://github.com/japaric/panic-semihosting"
version = "0.3.0"

[dependencies]
cortex-m = "0.5.0"
cortex-m-semihosting= "0.3.0"

[features]
inline-asm = ["cortex-m-semihosting/inline-asm", "cortex-m/inline-asm"]